--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = data/things/images
 	url = git@github.com:courtois-neuromod/things.stimuli.git
 	datalad-id = 5504289b-0ac5-4f7c-a6cd-86af1f5c2135
+[submodule "data/videogames/shinobi"]
+	path = data/videogames/shinobi
+	url = git@github.com:courtois-neuromod/shinobi.stimuli.git
+	datalad-id = 74cb8a6e-664b-11eb-a4f2-1a44c1d5432b
