--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = data/videogames/shinobi
 	url = git@github.com:courtois-neuromod/shinobi.stimuli.git
 	datalad-id = 74cb8a6e-664b-11eb-a4f2-1a44c1d5432b
+[submodule "data/videogames/mario"]
+	path = data/videogames/mario
+	url = git@github.com:courtois-neuromod/mario.stimuli.git
+	datalad-id = 23782599-795f-46e5-aefe-5ecd578e968d
