--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,7 @@
 	path = data/retinotopy
 	url = git@github.com:courtois-neuromod/retino.stimuli.git
 	datalad-id = 52140b46-63c8-45a7-a03f-2f2cab0db23f
+[submodule "data/game_ctrlr/stimuli"]
+	path = data/game_ctrlr/stimuli
+	url = ./data/game_ctrlr/stimuli
+	datalad-id = 4515f099-dae5-426a-9659-11687955d740
