--- a/.gitmodules
+++ b/.gitmodules
@@ -16,5 +16,5 @@
 	datalad-id = 52140b46-63c8-45a7-a03f-2f2cab0db23f
 [submodule "data/fLoc"]
 	path = data/fLoc
-	url = ./data/fLoc
+	url = git@github.com:courtois-neuromod/floc.stimuli.git
 	datalad-id = e730eb7b-0a99-453c-a861-2e21d6c72062
