--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,7 @@
 	path = data/fLoc
 	url = git@github.com:courtois-neuromod/floc.stimuli.git
 	datalad-id = e730eb7b-0a99-453c-a861-2e21d6c72062
+[submodule "data/videogames/mario-snes"]
+	path = data/videogames/mario-snes
+	url = ./data/videogames/mario-snes
+	datalad-id = 13404e51-6050-4ed4-902b-f8bc42cded1f
