[DATALAD] Added subdataset

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,8 @@
 	path = data/videogames/mario-snes
 	url = ./data/videogames/mario-snes
 	datalad-id = 13404e51-6050-4ed4-902b-f8bc42cded1f
+[submodule "data/videos/friends"]
+	path = data/videos/friends
+	url = git@github.com:courtois-neuromod/friends.stimuli.git
+	datalad-id = bbbf34b9-31aa-4e35-b1ed-36525c6d7ce3
+	datalad-url = git@github.com:courtois-neuromod/friends.stimuli.git
