--- a/.gitmodules
+++ b/.gitmodules
@@ -47,7 +47,7 @@
 	datalad-url = git@github.com:courtois-neuromod/mario3.stimuli.git
 [submodule "data/narratives.stimuli"]
 	path = data/narratives.stimuli
-	url = ./data/narratives.stimuli
+	url = git@github.com:courtois-neuromod/narratives.stimuli.git
 	datalad-id = 927ecf28-eda2-421d-9d25-6a55ed312166
 [submodule "data/language/petitprince"]
 	path = data/language/petitprince.stimuli
