--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-PsychoPy>=2020.2.4.post1
+PsychoPy==2020.2.4.post1
 gym-retro
-pandas>=1.1.1
+pandas>=1.1.1, <1.4.0
 python-dotenv
 tqdm>=4.60.0
 textdistance
