--- a/.gitmodules
+++ b/.gitmodules
@@ -23,7 +23,7 @@
 	datalad-id = e730eb7b-0a99-453c-a861-2e21d6c72062
 [submodule "data/videogames/mario-snes"]
 	path = data/videogames/mariostars
-	url = ./data/videogames/mario-snes
+	url = git@github.com:courtois-neuromod/mariostars.stimuli.git
 	datalad-id = 13404e51-6050-4ed4-902b-f8bc42cded1f
 [submodule "data/videos/friends"]
 	path = data/videos/friends
