--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 attrdict
 PsychoPy>=2023.1.0
 gym==0.25.2
-gym-retro
+#gym-retro
+git+https://github.com/Farama-Foundation/stable-retro.git
 pandas>=1.1.1
 python-dotenv
 tqdm>=4.60.0
