--- a/.gitmodules
+++ b/.gitmodules
@@ -54,3 +54,8 @@
 	url = https://github.com/OpenNeuroDatasets/ds003643.git
 	datalad-id = acc00a1b-08c3-4b06-ad19-3de01b33eeed
 	datalad-url = https://github.com/OpenNeuroDatasets/ds003643.git
+[submodule "data/mutemusic/stimuli"]
+	path = data/mutemusic/stimuli
+	url = git@github.com:courtois-neuromod/mutemusic.stimuli.git
+	datalad-id = a16a9cdf-f450-4ffe-a981-f910c96929f1
+	datalad-url = git@github.com:courtois-neuromod/mutemusic.stimuli.git
